kubernetes/apps/kube-system/cilium/app/talospatcher.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: vlan10-route-fix
  namespace: kube-system
  labels:
    app: vlan10-route-fix
spec:
  selector:
    matchLabels:
      app: vlan10-route-fix
  template:
    metadata:
      labels:
        app: vlan10-route-fix
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - talos-cp-1
                    - talos-cp-2
                    - talos-cp-3

      hostNetwork: true
      hostPID: true
      tolerations:
        # Allow this to run on control plane nodes
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule

      containers:
        - name: route-fixer
          image: public.ecr.aws/docker/library/alpine:3.24.2
          securityContext:
            privileged: true
            capabilities:
              add: ["NET_ADMIN"]
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
