kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - "hubble.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
      - group: ""
        name: hubble-ui
        namespace: kube-system
        port: 80
      matches:
      - path:
          type: PathPrefix
          value: /
